# UCAS-SD-2026

./: .gitignore  CMakeLists.txt  PROJECT_DIVISION.md  README.md
benchmark/: benchmark_avl.c
reference/: avl_reference_full.c
scripts/: run_tests.py
src/: avl_tree.c  avl_tree.h  main.c
student_a/: README.md  图解与推导.md  思考想法记录.md  答辩问题回答.md
student_b/: README.md  b.c
tests/: test_avl.c  test_core.c  test_extra.c
